Implemented Entity detection logic and some raycasting for blocks.